[tool.poetry]
name = "quantization"
version = "0.0.0"
description = ""
authors = ["이수빈 <subin.lee@seculayer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"
pylint = "^3.0.0a5"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2"
tensorflow = "2.11.0"
keras = "*"
tensorflow_hub = "*"
numpy = "*"
tensorflow-model-optimization = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
